# gaussian-autoencoder

./: .gitignore  LICENSE  README.md  REFACTORING_SUMMARY.txt  accelerate_config.yaml  how_to_install.txt  pyproject.toml  run_multi_gpu.sh  run_train.sh
configs/: chamfer.yaml  custom.yaml  default.yaml
docs/: CHANGELOG_INPUT_STATS.md  MULTI_PLY.md  REFACTORING.md  TENSORBOARD.md
gs_merge/: __init__.py
gs_merge/config/: __init__.py  args.py  loader.py
gs_merge/data/: __init__.py  dataset.py  gaussian.py  ply_io.py  voxelizer.py
gs_merge/loss/: __init__.py  chamfer_loss.py  gmae_loss.py  utils.py
gs_merge/model/: __init__.py  ae.py  encoder.py  heads.py
gs_merge/training/: __init__.py  callbacks.py  schedulers.py  trainer.py
gs_merge/utils/: __init__.py  debug_utils.py  voxel_utils.py
inputs/gaussian_ply/: point_cloud_9734998f.voxel  point_cloud_f2f994f8.voxel  point_cloud_f41b2495.voxel
scripts/: compress.py  train.py
scripts/utils/: voxel_info.py
tests/: __init__.py  conftest.py  test_loss.py  test_model.py  test_schedulers.py
